--- a/Módulo 03 - CSS Básico/aula10/index.html
+++ b/Módulo 03 - CSS Básico/aula10/index.html
@@ -36,6 +36,10 @@
             width: 1pc;
             height: 1pc;
         }
+        /* 
+            Medidas Absolutas
+            cm (centimetro), mm (milimetro), in (polegada), px (pixel), pt(ponto), pc(paica).
+        */
     </style>
 </head>
 <body>
