--- a/Módulo 04 - CSS Intermediário/aula02/index.html
+++ b/Módulo 04 - CSS Intermediário/aula02/index.html
@@ -21,9 +21,7 @@
             Nem um parágrafo dentro de um parágrafo.
         */
 
-        body {
-            font-size: 1.2em;
-        }
+        body { font-size: 1.2em; }
     </style>
 </head>
 <body>
