--- a/Módulo 04 - CSS Intermediário/aula03/index.html
+++ b/Módulo 04 - CSS Intermediário/aula03/index.html
@@ -6,9 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Overflow</title>
     <style>
-        body {
-            font-size: 1.2rem;
-        }
+        body { font-size: 1.2em; }
 
         #container {
             color: yellow;
