--- a/Módulo 04 - CSS Intermediário/aula04/alinhamento.html
+++ b/Módulo 04 - CSS Intermediário/aula04/alinhamento.html
@@ -6,10 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Alinhamento Horizontal</title>
     <style>
-
-        body {
-            font-size: 1.2rem;
-        }
+        body { font-size: 1.2em; }
+        
         #quadrado {
             width: 50px;
             height: 50px;
