--- a/Módulo 04 - CSS Intermediário/aula05/index.html
+++ b/Módulo 04 - CSS Intermediário/aula05/index.html
@@ -6,9 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Position</title>
     <style>
-        body {
-            font-size: 1.2rem;
-        }
+        body { font-size: 1.2em; }
+        
         .quadrado {
             width: 100px;
             height: 100px;
