--- a/Módulo 04 - CSS Intermediário/aula05/sticky.html
+++ b/Módulo 04 - CSS Intermediário/aula05/sticky.html
@@ -6,9 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Position Sticky</title>
     <style>
-        body {
-            font-size: 1.2rem;
-        }
+        body { font-size: 1.2em; }
+        
         .quadrado {
             width: 100px;
             height: 100px;
